# pyinfra-docker-compose-generic

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyinfra_docker_compose_generic/: __init__.py  builders.py  config.py  context.py  operations.py  steps.py  types.py  util.py
src/pyinfra_docker_compose_generic/templates/: compose.override.yml.j2
